--- a/ChangeLog
+++ b/ChangeLog
@@ -1,1 +1,2 @@
+v1.0.0 tagged June 6, 2018 - Both functions complete, implementation complete
 v0.1.0 tagged June 5, 2018 - First part implemented and working
